[#1] mysql-items-patch-error
